# hash_array_mapped_trie

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  entrypoint.sh  graph.txt  main.cpp
.github/workflows/: googletest-checker.yml
Google_tests/: test.cpp
google_tests/lib/googletest/docs/: gmock_cook_book.md
google_tests/lib/googletest/docs/_layouts/: default.html
header/: Trie.h
img/: diploma.docx  diploma.odt  diploma1.odt  figures.drawio  text  ~$iploma.docx  ~WRL0662.tmp
include/: Trie.cpp  hamt.h  trie.h  utils.h  visualize.h
lib/: Makefile
lib/googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-release/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-release/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googletest/cmake/: internal_utils.cmake
lib/libcds-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
src/: hashed_key.cpp  test.cpp  trie.cpp  util.h  utils.cpp  visualize.cpp
test/: CMakeLists.txt  benchmark_test.cpp  perfomance.txt  run_test.sh  test.cpp  unit_test.cpp
test/.cmake/api/v1/reply/: cache-v2-6daa6b2d857ae1cab84c.json  cmakeFiles-v1-fb3a08c760fd81c4c616.json  codemodel-v2-52b71b1bd32d3514e798.json  directory-googletests.googlemock-Debug-19efc1be81ead836c741.json  directory-googletests.googletest-Debug-1814bea0428c5423eabe.json  index-2022-05-21T08-56-02-0772.json  target-gmock-Debug-6175a2878aaa8ae6e88e.json  target-gmock_main-Debug-a1e0d4b627648bf1e2bc.json  target-gtest-Debug-b5079686457839eb96bc.json  target-gtest_main-Debug-d3aaf0a2a9759c609d29.json  target-run_tests-Debug-d44afe40422e1c7aa680.json  toolchains-v1-592d7ed3ffefc230c600.json
test/benchmark_result/: Hamt_Insert.txt  Hamt_Lookup.txt  Hamt_Multithreading_Insert.txt  Hamt_Remove.txt  general.txt
test/googletests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
test/googletests/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
test/googletests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
